form screen changed

--- a/Cuisine/Views/Order/Index.cshtml
+++ b/Cuisine/Views/Order/Index.cshtml
@@ -92,7 +92,7 @@
                                                     </td>
 						                            <td rowspan="2">
                                                         <div class="span1">
-                                                            <img alt="Click For Order" onclick="UpdateBasket(@product.ProductId);" 
+                                                            <img alt="Click For Order" style="cursor:pointer" onclick="UpdateBasket(@product.ProductId);" 
                                                                 src="../../Content/Images/button-plus.gif"/>
                                                         </div>
                                                     </td>
