--- a/Cuisine/Views/Order/Order.cshtml
+++ b/Cuisine/Views/Order/Order.cshtml
@@ -7,6 +7,7 @@
 <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="../../Scripts/Cuisine/Cuisine.js" type="text/javascript"></script>
 
 <script type="text/javascript">
     $(function () {
@@ -16,6 +17,12 @@
         $("#OrderDiv").height(y);
 
         $(".help-block").hide();
+
+        $("#submitForm").click(function() {
+            OrderOnline();
+        });
+        
+        
     });
 
 </script>
@@ -35,52 +42,53 @@
             </ul>
         </div>
         <div class="block_content">
+        <span class="help-block" id="generalRequired"></span>
         <form method="post" id="OrderForm" class="form-stacked" style="display:block" action="">        
             <div class="clearfix">
                 <label for="FirstName">Your First Name:</label>
                 <div class="input">
-                    <input type="text" size="20" name="" id="FirstName" class="span4"/>
-                    <span class="help-block">Required.</span>
+                    <input type="text" size="20" name="" id="FirstName" class="span4" onclick="$('#firstNameRequired').hide();"/>
+                    <span class="help-block" id="firstNameRequired">Required.</span>
                 </div>
             </div>
             <div class="clearfix">
                 <label for="LastName">Your Last Name:</label>
                 <div class="input">
-                    <input type="text" size="20" name="" id="LastName" class="span4"/>
-                    <span class="help-block">Required.</span>
+                    <input type="text" size="20" name="" id="LastName" class="span4" onclick="$('#lastNameRequired').hide();"/>
+                    <span class="help-block" id="lastNameRequired">Required.</span>
                 </div>
             </div>
             <div class="clearfix">
                 <label for="Address">Your Address:</label>
                 <div class="input">
-                    <textarea id="Address" class="span4"/>
-                    <span class="help-block">Required.</span>
+                    <textarea id="Address" class="span4" onclick="$('#addressRequired').hide();"/>
+                    <span class="help-block" id="addressRequired">Required.</span>
                 </div>
             </div>
             <div class="clearfix">
                 <label for="PostalCode">Your Post Code:</label>
                 <div class="input">
-                    <input type="text" size="20" name="" id="PostalCode" class="span4"/>
-                    <span class="help-block">Required.</span>
+                    <input type="text" size="20" name="" id="PostalCode" class="span4" onclick="$('#postCodeRequired').hide();"/>
+                    <span class="help-block" id="postCodeRequired">Required.</span>
                 </div>
             </div>
             <div class="clearfix">
                 <label for="Phone">Your Phone:</label>
                 <div class="input">
-                    <input type="text" size="20" name="" id="Phone" class="span4"/>
-                    <span class="help-block">Required.</span>
+                    <input type="text" size="20" name="" id="Phone" class="span4" onclick="$('#phoneRequired').hide();"/>
+                    <span class="help-block" id="phoneRequired">Required.</span>
                 </div>
             </div>
             <div class="clearfix">
                 <label for="Email">Email Address:</label>
                 <div class="input">
-                    <input type="email" value="" size="30" name="" id="Email" class="span4"/>
-                    <span class="help-block">Required.</span>
+                    <input type="email" value="" size="30" name="" id="Email" class="span4" onclick="$('#emailRequired').hide();"/>
+                    <span class="help-block" id="emailRequired">Required.</span>
                 </div>
             </div>
         </form>
-            <input type="submit" style="text-align:center" 
-                value="Create Order" class="btn btn-large btn-primary" onclick="OrderOnline(event);">
+            <input type="submit" style="text-align:center" id="submitForm"
+                value="Create Order" class="btn btn-large btn-primary"/>
 
     </div>
     <div class="bendl"></div>
