--- a/Cuisine/Views/Order/ShoppingCart.cshtml
+++ b/Cuisine/Views/Order/ShoppingCart.cshtml
@@ -5,10 +5,18 @@
 
 <div class="row">
     <div class="span4">
+    <div>
+        <h4>
+            <span class="label label-info" style="font-size:14px">Your order</span>
+        </h4>
+    </div>    
     <table class="table-striped">
         <tbody>
-            @foreach (var cart in Model.CartItems)
+            
+            @if (Model != null)
             {
+                foreach (var cart in Model.CartItems)
+                {
                 <tr>
 			        <td colspan="3"><h6>@cart.Product.Name</h6></td>
 		        </tr>
@@ -28,6 +36,7 @@
                             onclick="DeleteFromBasket(@cart.ProductId);" style="border-width:0px;"/>
                     </td>
 		        </tr>
+                }
             }
 		        <tr>
 			        <td><h5>Subtotal:</h5></td>
@@ -49,13 +58,10 @@
 		        </tr>
 		        <tr align="left">
 			        <td colspan="3" style="padding-top:15px;">        
-                        <input type="submit" value="Order Now" onclick="OrderCuisine();"/>
+                        <input type="submit" value="Order Now" class="btn btn-primary" onclick="OrderCuisine();"/>
                     </td>
 		        </tr>
 	    </tbody>
     </table>
-    <div id="GetDetailsDiv">
-                
-    </div>
     </div>
 </div>
