--- a/Cuisine/Areas/Admin/Views/Order/History.cshtml
+++ b/Cuisine/Areas/Admin/Views/Order/History.cshtml
@@ -21,9 +21,7 @@
         <th>
             Address
         </th>
-        <th>
-            City
-        </th>
+      
         <th>
             PostalCode
         </th>
@@ -33,7 +31,12 @@
         <th>
             Email
         </th>
-        <th></th>
+               <th>
+        Description
+        </th>
+        <th>
+        Order Date
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -47,9 +50,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Address)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.PostalCode)
         </td>
@@ -58,6 +59,13 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Email)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.OrderDate)
         </td>
         <td>          
             @Html.ActionLink("Details", "Details", new { id=item.OrderId })            
